[feature] add patch user endpoint
